# wasi_edge_impulse

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.txt  build.sh  get-wasi-sdk.sh  wasi-toolchain.cmake
.github/workflows/: ci.yml
edge-impulse-sdk/porting/: ei_classifier_porting.h
edge-impulse-sdk/porting/wasi/: ei_classifier_porting.cpp
model-parameters/: anomaly_metadata.h  model_metadata.h  model_variables.h
src/: main.cpp
tflite-model/: tflite_learn_7_compiled.cpp  tflite_learn_7_compiled.h
